# parallel-HGS-CVRP

./: CMakeLists.txt  CMakePresets.json
Program/: AlgorithmParameters.cpp  AlgorithmParameters.h  CudaSanity.cu  CudaSanity.h  Genetic.cpp  Genetic.h  GpuDataLayout.cuh  GpuLocalSearch.cu  GpuLocalSearch.h  GpuSwapStarKernel.cuh  Individual.cpp  Individual.h  LocalSearch.cpp  LocalSearch.h  Population.h  commandline.h  main.cpp
Program/IslandModels/: IslandModel.cpp  IslandModel.h  IslandState.h
Program/IslandModels/ImmigrantHandlers/: ImmigrantHandler.h
Program/IslandModels/IslandCommunicators/: IslandCommunicator.h  MPIIslandCommunicator.cpp  MPIIslandCommunicator.h
Program/IslandModels/MigrantSelectors/: MigrantSelector.h
Program/IslandModels/MigrationPolicies/: MigrationPolicy.h
Program/IslandModels/Topologies/: Topology.h
